--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/style.css">
-  <link rel="stylesheet" href="../styles/about.css">
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/about.css">
   <!--CSS loads on Chrome and Firefox, but not Safari-->
   <script src="https://kit.fontawesome.com/cbd5459603.js" crossorigin="anonymous"></script>
   <title>About</title>
