changed image relative paths

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </header>
   <main>
     <h2>Hello, World!</h2>
-    <img src="../images/megan.jpeg" alt="A picture of Megan on top of Mt St Helens">
+    <img src="images/megan.jpeg" alt="A picture of Megan on top of Mt St Helens">
     <section class="info">
       <p>My name is Megan and I am an aspiring software developer.
         I really enjoy learning languages, which includes programming
