--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
         delete planet information. This was developed in Python
         using Flask. It is deployed via Heroku.
       </p>
-      <img src="../images/solar-system.png" alt="Preview of Solar System code">
+      <img src="images/solar-system.png" alt="Preview of Solar System code">
     </article>
     <article class="container">
       <h3>
@@ -41,7 +41,7 @@
         creating, and updating said tasks and goals. This uses a postgres database and is deployed
         via Heroku.
           </p>
-      <img src="../images/tasklist-screenshot.png" alt="Preview of Task List code">
+      <img src="images/tasklist-screenshot.png" alt="Preview of Task List code">
     </article>
     <article class="container">
       <h3><a href="https://github.com/mckorling/web-map-requests" target="_blank">Travel Map Project</a>
@@ -51,7 +51,7 @@
         coordiantes are retrived by calling the LocationIQ API. Multiple places can be
         entered and when the user is done, the webpage can be opened to view all entered
         locations on a map.</p>
-      <img src="../images/map-screenshot.png" alt="Preview of travel map screen output">
+      <img src="images/map-screenshot.png" alt="Preview of travel map screen output">
     </article>
     <article class="container">
       <h3><a href="https://github.com/mckorling/viewing-party" target="_blank">Viewing Party Project</a>
@@ -59,7 +59,7 @@
       <p>This was a solo project where a complex data structure is used to store movie
         information. Movies can be retrieved by who watched them, who needs a 
         recommendation, by genre, favorite genre, and more. </p>
-      <img src="../images/viewing-party.png" alt="Preview of Viewing Party code">
+      <img src="images/viewing-party.png" alt="Preview of Viewing Party code">
       </article>
   </main>
   <footer>
